# home-assistant-cli

./: Dockerfile  Dockerfile.armhf  pyproject.toml  setup.py
.github/workflows/: python.yml
homeassistant_cli/: config.py  const.py  hassconst.py
homeassistant_cli/plugins/: map.py
